| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 2.0
	- Version 2.0.0

Developer Version
	- 1.9.0 Development

Building Steps: 4300



 Version 1.9.0 Development
-----------------------------------------------------------------

 - bug #0000xxx: 

 - security fixed: 

 - bug fixed: 

 - changed: DataContainer Classes changed to the correct PHP5-Class-Design.
 - changed: Deleted all PHP4 constuctors iun all classes.
 - changed: Massive cleanup of the source code, removed many deprecated functions,
            cleanup many PHP4 specific code.
 - changed: Better search page, replace the search functions into the search class.
 - changed: Guestbook config now as object and only loaded in the guestbook extension.
 - changed: Relocated all module configuration settings into the modules
 - changed: Enabled the tabPane for all extensions.
 - changed: Remoced the old configuration class "modconfig", replaced it with the
            datacontainer objects.
 - changed: German word "Impressum" changed into the english "Imprint" (global for all files).
 - changed: Start to update tinyMCE from 2.1.3 to 3.0 (but freezed while tinyMCE 3 saves
            all content with the paragraph tag (<p>, i hate it so much - the setting
            "force_p_newlines : false" dosnt works).
 - changed: 

 - added: SEO format 3 (.html-format) has now the template variable.
 - added: Language support for the guestbook, a texteditor for the guestbook.
 - added: New Template Engine (toendaTemplate), following extension are now implemented:
          - News (frontpage entry, single view, comment entry)
          - Links (category title, link entry)
          - Guestbook (entry)
          - Imagegallery (album list table header, album list entry, imagelist for list