@@ -9,9 +9,9 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 4300</build>
+	<build>Build 4377</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
-	<release_date>01.02.2008 - 02:33</release_date>
+	<release_date>03.02.2008 - 21:37</release_date>
 	<toenda_copyright>2003 - 2008</toenda_copyright>
 </version>
