@@ -28,7 +28,7 @@ Version 2.0
 Developer Version
 	- 1.9.0 Development
 
-Building Steps: 4300
+Building Steps: 4377
 
 
 
@@ -55,6 +55,7 @@ Building Steps: 4300
  - changed: Start to update tinyMCE from 2.1.3 to 3.0 (but freezed while tinyMCE 3 saves
             all content with the paragraph tag (<p>, i hate it so much - the setting
             "force_p_newlines : false" dosnt works).
+ - changed: Improvements of the template editor.
  - changed: 
 
  - added: SEO format 3 (.html-format) has now the template variable.
